@@ -161,7 +161,7 @@
 #' @usage 
 #' confmirt(data, model, itemtype = NULL, guess = 0, upper = 1, pars = NULL, 
 #' constrain = NULL, parprior = NULL, grsm.block = NULL, verbose = TRUE, 
-#' draws = 2000, debug = FALSE, rotate = 'varimax', Target = NULL, 
+#' draws = 2000, debug = FALSE, rotate = 'varimax', Target = NULL, D = 1.702, 
 #' technical = list(),  ...)
 #' 
 #' \S4method{summary}{ConfirmatoryClass}(object, suppress = 0, digits = 3, verbose = TRUE, ...)
