@@ -168,16 +168,16 @@
 #' @section IRT Models:
 #' 
 #' The parameter labels use follow the convention, here using two factors and \eqn{k} as the number 
-#' of categories:
+#' of categories. Throughout all models D is a constant (default 1.702):
 #' 
 #' \describe{ 
 #' \item{Rasch}{
 #' Only one intercept estimated. \deqn{P(x = 1|\theta, d) = \frac{1}{1 + 
-#' exp(-1*(\theta + d))}}
+#' exp(-D*(\theta + d))}}
 #' }
 #' \item{1-4PL}{
 #' Depending on the model \eqn{u} may be equal to 1 and \eqn{g} may be equal to 0. 
-#' \deqn{P(x = 1|\theta, \psi) = g + \frac{(u - g)}{1 + exp(-1.702 * 
+#' \deqn{P(x = 1|\theta, \psi) = g + \frac{(u - g)}{1 + exp(-D * 
 #' (a_1 * \theta_1 + a_2 * \theta_2 + d))}} 
 #' }
 #' \item{graded}{
@@ -190,25 +190,25 @@
 #' and only adjusted by a single 'difficulty' parameter (c). Again,
 #' \deqn{P(x = k | \theta, \psi) = P(x \ge k | \theta, \phi) - P(x \ge k + 1 | \theta, \phi)} 
 #' but now 
-#' \deqn{P = \frac{1}{1 + exp(-1.702 * (a_1 * \theta_1 + a_2 * \theta_2 + d_k + c))}} 
+#' \deqn{P = \frac{1}{1 + exp(-D * (a_1 * \theta_1 + a_2 * \theta_2 + d_k + c))}} 
 #' } 
 #' \item{gpcm/nominal}{For the gpcm the \eqn{d_k} values are treated as fixed and orderd values 
 #' from 0:(k-1) (in the nominal model \eqn{d_0} is also set to 0). Additionally, for identification 
 #' in the nominal model \eqn{ak_0 = 1}, \eqn{ak_k = (k - 1)}.
-#' \deqn{P(x = k | \theta, \psi) = \frac{exp(-1.702 * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}
-#' {\sum_i^k exp(-1.702 * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}}
+#' \deqn{P(x = k | \theta, \psi) = \frac{exp(-D * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}
+#' {\sum_i^k exp(-D * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}}
 #' }
 #' \item{mcm}{For identification \eqn{ak_0 = d_0 = 0} and \eqn{\sum_0^k t_k = 1}.
 #' \deqn{P(x = k | \theta, \psi) = C_0 (\theta) * t_k  + (1 - C_0 (\theta)) * 
-#' \frac{exp(-1.702 * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}  
-#' {\sum_i^k exp(-1.702 * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}}
+#' \frac{exp(-D * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}  
+#' {\sum_i^k exp(-D * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}}
 #'
-#' where \eqn{C_0 (\theta) = \frac{exp(-1.702 * ak_0 * (a_1 * \theta_1 + a_2 * \theta_2) + d_0)}  
-#' {\sum_i^k exp(-1.702 * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}}
+#' where \eqn{C_0 (\theta) = \frac{exp(-D * ak_0 * (a_1 * \theta_1 + a_2 * \theta_2) + d_0)}  
+#' {\sum_i^k exp(-D * ak_k * (a_1 * \theta_1 + a_2 * \theta_2) + d_k)}}
 #' }
 #' \item{partcomp}{Partially compensatory models consist of the products of 2PL probability curves. 
-#' \deqn{P(x = 1 | \theta, \psi) = g + (1 - g) (\frac{1}{1 + exp(-1.702 * (a_1 * \theta_1 + d_1))} * 
-#' \frac{1}{1 + exp(-1.702 * (a_2 * \theta_2 + d_2))})}
+#' \deqn{P(x = 1 | \theta, \psi) = g + (1 - g) (\frac{1}{1 + exp(-D * (a_1 * \theta_1 + d_1))} * 
+#' \frac{1}{1 + exp(-D * (a_2 * \theta_2 + d_2))})}
 #' }
 #' }
 #' 
@@ -249,7 +249,7 @@
 #' @usage 
 #' mirt(data, model, itemtype = NULL, guess = 0, upper = 1, SE = FALSE, SEtol = .001, pars = NULL, 
 #' constrain = NULL, parprior = NULL, rotate = 'varimax', Target = NaN, 
-#' prev.cor = NULL, quadpts = NULL, grsm.block = NULL, verbose = FALSE, debug = FALSE, 
+#' prev.cor = NULL, quadpts = NULL, grsm.block = NULL, D = 1.702, verbose = FALSE, debug = FALSE, 
 #' technical = list(), ...)
 #' 
 #' \S4method{summary}{ExploratoryClass}(object, rotate = '', Target = NULL, suppress = 0, digits = 3, 
