@@ -5,8 +5,8 @@
   bfactor(data, model, itemtype = NULL, guess = 0, upper =
     1, SE = FALSE, SEtol = .001, pars = NULL, constrain =
     NULL, parprior = NULL, prev.cor = NULL, quadpts = 20,
-    grsm.block = NULL, verbose = FALSE, debug = FALSE,
-    technical = list(), ...)
+    grsm.block = NULL, D = 1.702, verbose = FALSE, debug =
+    FALSE, technical = list(), ...)
 }
 \arguments{
   \item{data}{a \code{matrix} or \code{data.frame} that
